src/objects/workday_time_off__x.object
<CustomObject>
    <description>workday.time_off</description>
    <externalDataSource>WorkDay_HRIS</externalDataSource>
    <externalName>workday.time_off</externalName>
    <fields>
        <fullName>comments__c</fullName>
        <description>comments</description>
        <externalDeveloperName>comments</externalDeveloperName>
        <label>comments</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>day_of_the_week__c</fullName>
        <description>day_of_the_week</description>
        <externalDeveloperName>day_of_the_week</externalDeveloperName>
        <label>day_of_the_week</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_id__c</fullName>
        <description>employee_id</description>
        <externalDeveloperName>employee_id</externalDeveloperName>
        <label>employee_id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>requested__c</fullName>
        <description>requested</description>
        <externalDeveloperName>requested</externalDeveloperName>
        <label>requested</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>type</description>
        <externalDeveloperName>type</externalDeveloperName>
        <label>type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit_of_time__c</fullName>
        <description>unit_of_time</description>
        <externalDeveloperName>unit_of_time</externalDeveloperName>
        <label>unit_of_time</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>workday.time_off</label>
    <pluralLabel>workday.time_off</pluralLabel>
</CustomObject>